# analise-leis

./: .gitignore  Agents.py  Dockerfile  LLM.py  Langgraph.py  Prompts.py  README.md  Rag.py  api.py  app.py  docker-compose.yml  ingestion.py  leis.txt  main.py  pyproject.toml  requirements.txt  utils.py
scripts/: init-langfuse.sql
