[project]
name = "analise-leis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.40.61",
    "ddgs>=9.10.0",
    "langchain-core>=1.2.7",
    "langfuse<3.0.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "llama-index-core==0.12.52",
    "llama-index-embeddings-bedrock>=0.5.2",
    "llama-index-llms-anthropic>=0.6.19",
    "llama-index-llms-bedrock>=0.3.8",
    "llama-index-vector-stores-qdrant==0.4.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "protobuf>=6.33.5",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-ai>=1.38.0",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "qdrant-client==1.12.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
]
